workspace(name = "cohttp")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
    ],
)

http_archive(
    name = "obazl_rules_ocaml",
    sha256 = "bb81f3f61adbb8a732e662586f81aa4a11173f5a75d3158589fd406364f0e63c",
    strip_prefix = "rules_ocaml-66f50d592728809d4d54aa4b081768023806a4f8",
    urls = [
        "https://github.com/tek/rules_ocaml/archive/66f50d592728809d4d54aa4b081768023806a4f8.tar.gz",
    ],
)

http_archive(
    name = "uri",
    sha256 = "7e18d78f6c7264de22e9af9ff5e4ec8da5e56dca93241c7223d911da2c8ca78b",
    strip_prefix = "ocaml-uri-911c3d24e573f8dcfb58f7ae4ceea4c41f76e325",
    urls = [
        "https://github.com/tek/ocaml-uri/archive/911c3d24e573f8dcfb58f7ae4ceea4c41f76e325.tar.gz",
    ],
)

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
load("//:bzl/opam.bzl", "opam")

ocaml_configure(
    build = "4.12",
    opam = opam,
)
