workspace(name = "cohttp")

load("//bzl:deps.bzl", "cohttp_deps")

cohttp_deps()

load("//bzl:transitive.bzl", "cohttp_transitive_deps")

cohttp_transitive_deps()

load("//bzl:transitive2.bzl", "cohttp_transitive_deps_2")

cohttp_transitive_deps_2()

load("//bzl:setup.bzl", "cohttp_setup")

cohttp_setup()

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
load("//bzl:opam.bzl", "opam")

ocaml_configure(
    build = "4.10",
    opam = opam,
)
