load("//:bzl/library.bzl", "lib", "mod", "sig")

lib(
    name = "lib-cohttp-async",
    deps_opam = [
        "logs.fmt",
        "base",
        "fmt",
        "async_unix",
        "async_kernel",
        "ipaddr.unix",
        "magic-mime",
    ],
    modules = dict(
        body = sig(":body_raw"),
        body_raw = mod(),
        client = mod(":io", ":body"),
        io = mod(),
        request = mod(),
        response = mod(),
        server = mod(":io", ":body"),
    ),
    deps = [
        "//cohttp/src:#Cohttp",
        "@uri//lib:lib-uri",
        "@uri//lib_sexp:lib-uri-sexp",
        "@uri//etc:services_short",
        "@conduit//src/conduit-async:lib-conduit-async",
    ],
    ppx = True,
)
