load("@obazl_rules_ocaml//dsl:library.bzl", "lib", "mod", "sig")

lib(
    name = "cohttp-lwt",
    deps_opam = [
        "lwt",
        "logs",
        "logs.lwt",
    ],
    modules = dict(
        body = sig(),
        client = sig(":s", ":make"),
        cohttp_lwt = mod(":s", ":client", ":server"),
        make = mod(":s"),
        server = sig(":s", ":make"),
        s = mod(":body"),
        string_io = sig(),
    ),
    deps = [
        "//cohttp/src:#Cohttp",
    ],
    ppx = ["ppx_sexp_conv"],
)
