load("@obazl_rules_ocaml//dsl:library.bzl", "lib", "mod", "sig")

lib(
    name = "cohttp-lwt-unix-test",
    deps_opam = [
        "oUnit",
    ],
    modules = dict(
        cohttp_lwt_unix_test = sig(),
    ),
    deps = [
        "//cohttp_test/src:#Cohttp_test",
        "//cohttp-lwt-unix/src:#Cohttp_lwt_unix",
        "@conduit//src/conduit-lwt:lib-conduit-lwt",
    ],
    ppx_deps = True,
)
